fixing spacing issue with topics/show footer
git-svn-id: http://eldorado.googlecode.com/svn/trunk@591 9c008b19-a030-0410-9975-d76d301b4276

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -339,7 +339,7 @@ tbody .tds {
 
 .info-center {
 	float: left;
-	margin: 0px 8px;
+	margin: 0 8px 10px 8px;
 	text-align: center;
 }
 
